--- a/praktikum6/src/main/res/values/strings.xml
+++ b/praktikum6/src/main/res/values/strings.xml
@@ -102,6 +102,14 @@ lagi!</item>
         <item>https://ladypinem.com/wp-content/uploads/Alam-Dataran-Tinggi-Dieng-Telaga-Warna-1.jpg</item>
         <item>https://rimbakita.com/wp-content/uploads/2019/08/taman-nasional-karimunjawa.jpg</item>
     </string-array>
+    <string-array name="data_lat">
+        <item>-7.333797</item>
+        <item>-7.374473</item>
+    </string-array>
+    <string-array name="data_lang">
+        <item>109.206959</item>
+        <item>109.240532</item>
+    </string-array>
     <string name="title_activity_detail">ScrollingActivity</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
@@ -193,4 +201,5 @@ lagi!</item>
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
