--- a/praktikum10/src/main/res/values/strings.xml
+++ b/praktikum10/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="category">Category</string>
     <string name="description">Description</string>
     <string name="date">Date</string>
+    <string name="delete">Delete</string>
+    <string name="submit">Submit</string>
+
 </resources>
