--- a/praktikum11/src/main/res/values/strings.xml
+++ b/praktikum11/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Firebase</string>
+    <string name="date">Date</string>
+    <string name="description">Description</string>
+    <string name="category">Category</string>
+    <string name="title">Title</string>
+    <string name="delete">Delete</string>
 </resources>
